# Groebner_basis

./: CMakeLists.txt  README.md  main.cpp  monomial.cpp  monomial.h  monomial_order.cpp  monomial_order.h  polynomial.cpp  polynomial.h  polynomial_order.h  polynomial_set.h  term.cpp  term.h  term_order.h  test.cpp  testCyclic.cpp  testMonomial.cpp  testMonomialOrder.cpp  testPolynomial.cpp  testPolynomialSet.cpp  testTerm.cpp  tests.cpp  tests.h
